2017-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph: Run gnulib-tool --add-import.
	* (top-level): Run gnulib-tool --add-import.

2017-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* po_document/LINGUAS: Add cs, da.

2017-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Update instructions for updating translation
	files.

2017-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac, README-hacking: Change instructions for
	upgrading gettext.

2017-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Add news items.

2017-04-14  gettextize  <bug-gnu-gettext@gnu.org>

	* gnulib/m4/progtest.m4: Upgrade to gettext-0.19.8.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.

2017-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\enablebackslashhack, \fixbackslash):
	Revert to usual definitions after a line command parsed with
	\parsearg.  This led to an error when a @synindex command was
	used near the start of a file, reported by Mathieu Lirzin.

2017-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_convert_enumerate_command): 
	Handle case of labelling list entries with letters, using 'type' 
	and 'start' attributes on the <ol> tag.  This worked in the 
	makeinfo implementation from Texinfo 4.13 and earlier.  Report
	from Andreas Schwab.

2017-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_convert_enumerate_command):
	Check if the 'enumerate_specification' is defined, rather than
	true, as if the value is '0', this is considered to be false.
	Enumerated lists starting at 0 broken reported by Andreas Schwab.

2017-04-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (match_in_match_list): Take a argument to say
	which direction to search in, instead of using the order of the
	start and end arguments.
	(info_search_in_node_internal): Update, and make sure that both